add finished writing book status, and remove unused libraries, update jdk to 21